@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.mymovies.it"
        name="MyMovies.it"
-       version="1.1.1"
+       version="1.1.2"
        provider-name="muttley">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
@@ -17,7 +17,7 @@
     <summary lang="kr">MyMovies.it 영화 스크래퍼</summary>
     <summary lang="pt">Scraper de filmes MyMovies.it</summary>
     <description lang="it">Riporta problemi o suggerimenti su: https://code.google.com/p/mymovies-xbmc-scraper/issues/list o http://forum.xbmc.org/showthread.php?t=58141</description>
-    <description lang="en">Download Movie information from www.mymovies.it</description>
+    <description lang="en">Report problems or suggest on: https://code.google.com/p/mymovies-xbmc-scraper/issues/list o http://forum.xbmc.org/showthread.php?t=58141</description>
     <description lang="hu">Film információk letöltése a www.mymovies.it webhelyről</description>
     <description lang="kr">MyMovies.it 에서 영화 정보 다운로드</description>
     <description lang="pt">Descarregar informação de filmes de www.mymovies.it</description>
