@@ -1,5 +1,9 @@
 [B]Note:[/B] if the scraper is very slow, disable setting tagged with "(slow)".
 
+[B]1.1.2[/B]
+- Fixed regex: rating and trailer
+- Fixed url cache 
+
 [B]1.1.1[/B]
 - Change default films search url: http://www.google.it/search?q=film_name+site:mymovies.it
 - Fixed trailer problem. The first and only issue reported on http://code.google.com/p/mymovies-xbmc-scraper/issues/ ;)
